--- a/Services/AssessmentQuestion/templates/default/tpl.AnswerOptionTable.html
+++ b/Services/AssessmentQuestion/templates/default/tpl.AnswerOptionTable.html
@@ -1,31 +1,34 @@
+<script src="Services/AssessmentQuestion/js/AssessmentQuestionAuthoring.js"></script>
 <div class="form-inline" id="{ELEMENT_ID}">
-	<table class="singlechoicewizard table table-condensed table-striped">
+	<table class="aot_table table table-condensed table-striped">
 		<thead>
 			<tr>
 				<!-- BEGIN header_entry -->
 					<th>{HEADER_TEXT}</th>
 				<!-- END header_entry -->
-				<th><!-- BEGIN commands -->{COMMANDS_TEXT}<!-- END commands --></th>
+				<th>
+					<!-- BEGIN commands -->{COMMANDS_TEXT}<!-- END commands -->
+					<button type="button" name="{CMD_ADD}" class="js_add btn btn-link" id="add_{ID}">
+						<span class="glyphicon glyphicon-plus"></span>
+					</button>
+				</th>
 			</tr>
 		</thead>
-		<tbody class="scwzd">
+		<tbody>
 		<!-- BEGIN row -->
-			<tr  class="scwzd">
+			<tr  class="aot_row">
 				<!-- BEGIN body_entry -->
 				<td class="{ENTRY_CLASS}">
 					{ENTRY}
 				</td>
 				<!-- END body_entry -->
 				<td class="ilValignTop">
-					<button type="button" name="{CMD_ADD}" class="singlechoice_add btn btn-link" id="add_{ID}">
-						<span class="glyphicon glyphicon-plus"></span>
-					</button>
-					<button type="button" name="{CMD_REMOVE}" class="singlechoice_remove btn btn-link" id="remove_{ID}">
+					<button type="button" name="{CMD_REMOVE}" class="js_remove btn btn-link" id="remove_{ID}">
 						<span class="glyphicon glyphicon-minus"></span>
 					</button>
 					<!-- BEGIN move -->
-					<button type="button" name="{CMD_UP}" class="singlechoice_up btn btn-link" id="up_{ID}">{UP_BUTTON}</button>
-					<button type="button" name="{CMD_DOWN}" class="singlechoice_down btn btn-link" id="down_{ID}">{DOWN_BUTTON}</button>
+					<button type="button" name="{CMD_UP}" class="js_up btn btn-link" id="up_{ID}">{UP_BUTTON}</button>
+					<button type="button" name="{CMD_DOWN}" class="js_down btn btn-link" id="down_{ID}">{DOWN_BUTTON}</button>
 					<!-- END move -->
 				</td>
 			</tr>
@@ -36,6 +39,6 @@
 	<div class="ilFormInfo">{TXT_MAX_SIZE} {TXT_ALLOWED_SUFFIXES}</div>
 	<!-- END image_disclaimer -->
 	<!-- BEGIN count -->
-	<input type="hidden" name="{COUNT_POST_VAR}" value="1" />
+	<input class="js_count" type="hidden" name="{COUNT_POST_VAR}" value="1" />
 	<!-- END count -->
 </div>
