fix question form eating answeroptions

--- a/Services/AssessmentQuestion/templates/default/tpl.AnswerOptionTable.html
+++ b/Services/AssessmentQuestion/templates/default/tpl.AnswerOptionTable.html
@@ -39,6 +39,6 @@
 	<div class="ilFormInfo">{TXT_MAX_SIZE} {TXT_ALLOWED_SUFFIXES}</div>
 	<!-- END image_disclaimer -->
 	<!-- BEGIN count -->
-	<input class="js_count" type="hidden" name="{COUNT_POST_VAR}" value="1" />
+	<input class="js_count" type="hidden" name="{COUNT_POST_VAR}" value="{COUNT}" />
 	<!-- END count -->
 </div>
